# ts_course

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  definitions.tex  diagram1.tex  main.bbl-SAVE-ERROR  main.listing  main.tex  pyproject.toml  tex-fmt.toml  theorems.tex  Шаблоны для компиляций.docx
.github/workflows/: compile.yml
books/: .gitignore  ts_course.bib
code_examples/: dataframes.py  forecast_errors.py  graphs.ipynb  test.ipynb
images/: links  links.txt
src/: dataframes.tex  main.toc
src/0. Getting started/: 01_getting_started.tex  02_problems.tex  03_definitions.tex  04_forecast_quality.tex  05_metrics.tex  06_instruments.tex  06_questions.tex  definitions.tex  forecast_quality.tex  getting_started.tex  instruments.tex  metrics.tex  preamble.tex  problems.tex
src/1. Time series components/: 01_mece_decomposition.tex  decomposition.tex
src/5. Properties of time series/: 01_technical_properties.tex
src/6. Process properties/: properties.tex  ts_course.bib
src/example/: dataframes.tex
tex/: highlighting.tex  sty.sty  title.tex
